--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/main.css" />
+    <link rel="stylesheet" href="../assets/css/main-9fecd16c.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
-    <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/main-535075fd.js"></script>
     <title>Izzy Sempill</title>
 
     <style>
