--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/main-9fecd16c.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/main-535075fd.js"></script>
     <title>Izzy Sempill</title>
 
     <style>
@@ -191,8 +191,8 @@
 
                 <div class="content-element text-block">
                     <p class="text-block-subheading">Artist</p>
-                    <p class="text-block-content">I work across various mediums, driven by my love for experimentation. My process begins with exploring the unique properties and potential of different materials, followed by gradual refinement. For me, art is a calming and grounding practice that helps me establish a sense of place.</p>
-                    <p class="text-block-content">On this site, you'll find prints of my collages, life drawings and mixed media pieces. I'll also provide regular updates about my practice. I have various works and projects in progress, so there's more to come!</p>
+                    <p class="text-block-content">For me, art is a calming and grounding practice. I find so much joy in experimentation, so I always start my process by exploring the unique properties and possibilities of various materials. I often become completely absorbed, creating a large body of work in my chosen medium and then gradually refining select pieces until they capture the mood I aimed to achieve. Though much of my work features negative space and organic shapes, I have never felt it fits within a particular specialism or style. Instead, I am an art enthusiast through and through, always open to trying different methods and techniques until I have grasped them, before moving on to something new.</p>
+                    <p class="text-block-content">On this site, you’ll find select prints of my collages, life drawings and mixed media pieces. I'll also provide regular updates about my practice. I have various works and projects in progress, so there's more to come!</p>
                 </div>
                
                 <div class="divider"></div>
