--- a/updates.html
+++ b/updates.html
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/main-9fecd16c.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/main-535075fd.js"></script>
     <title>Izzy Sempill</title>
 
     <style>
@@ -150,13 +150,40 @@
 
             <div class="main-content-body">
 
+				<!-- Coming Soon (Risograph) -->
+                <div class="content-element text-block" style="padding-top:24px">
+                    <p class="text-block-subheading" style="margin-top: 0;">Coming soon</p>                   
+                    <p class="text-block-content">Recently I’ve been making monoprints, experimenting with organic shapes and mark-making to create a variety of textures (left image - black and white).</p>
+                    <p class="text-block-content">I wanted to push this idea further, so I digitised my work and printed copies using the Risograph process - a Japanese photocopying and printing method that came about in the 1980s and is still popular with designers today. Riso is known for its vibrant colours, limited palette and charming imperfections.</p>
+                    <p class="text-block-content">I’ve been playing with compositions - layering the shapes I monoprinted and Riso printing them in different colours (second and third images). It’s been an experimental process because you’re never quite sure how Riso prints will turn out, but I’m pleased with the results!</p>
+                    <p class="text-block-content">My limited edition A4 blue & pink Risograph series will soon be available to purchase through my Print Shop.</p>
+                </div>
+
+				<!-- Additional Images (Default Screens) -->
+                <div class="content-element image-grid-layout non-mobile" style="padding-bottom: 28px;">
+                    <div class="grid-item"><img src="assets/images/exhibitions/risograph/ris_1.jpg"></div>
+                    <div class="grid-item"><img src="assets/images/exhibitions/risograph/ris_2.jpg"></div>
+                    <div class="grid-item"><img src="assets/images/exhibitions/risograph/ris_3.jpg"></div>
+                </div>
+
+                <!-- Additional Images (Mobile) -->
+                <div class="image-hscroller mobile-only" style="padding-bottom: 28px;">
+                    <div class="scroll-wrapper">
+                        <div class="hscroller-item"><img src="assets/images/exhibitions/risograph/ris_1.jpg"></div>
+                        <div class="hscroller-item"><img src="assets/images/exhibitions/risograph/ris_2.jpg"></div>
+                        <div class="hscroller-item"><img src="assets/images/exhibitions/risograph/ris_3.jpg"></div>
+                    </div>
+                </div>
+
+                <div class="divider"></div>
+
 				<!-- Fine Art -->
                 <div class="content-element text-block" style="padding-top:24px">
                     <p class="text-block-subheading" style="margin-top: 0;">Workshops with BA Fine Art Students</p>
                     <p class="text-block-subheading">University of Salford</p>     
                     <p class="text-block-subheading">March 2025</p>                        
                     <p class="text-block-content">Participants were invited to bring their unwanted art (e.g. testers, or a piece they'd previously given up on) and rework it into something new. I offered up some of my old work as well. The aim was to create a relaxed atmosphere where they could forget the isolation and 'pressure to produce' we can feel when making art, studying at uni, and more generally in our day to day lives.</p>
-                    <p class="text-block-content">The workshops were very well-received. Participant feedback: “I feel much more awake now and my mood has lifted. It has been great to create work without worrying about the outcome. I'd like a longer session - it was so fun!”</p>
+                    <p class="text-block-content">The workshops were very well-received. Participant feedback: “<i>I feel much more awake now and my mood has lifted. It has been great to create work without worrying about the outcome. I'd like a longer session - it was so fun!</i>”</p>
                 </div>
 
                 <!-- Additional Images (Default Screens) -->
