--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main-9fecd16c.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
-    <script src="assets/js/main-535075fd.js"></script>
+    <script src="assets/js/main-eff4185c.js"></script>
     <title>Izzy Sempill</title>
 
     <style>
@@ -96,7 +96,7 @@
 
         <div class="sidebar-header">
             <span class="close-icon" onclick="closeSidebar()">
-                <img src="assets/icons/close.svg" height="24">
+                <img src="/assets/icons/close.svg" height="24">
             </span>
             <span class="logo logo-font">
                 Izzy Sempill
@@ -254,7 +254,7 @@
                 <div class="image-hscroller mobile-only">
                     <div class="scroll-wrapper">
                         <div class="hscroller-item"><img src="assets/images/examples/example-work-6.png"></div>
-                        <div class="hscroller-item"><img src="assets/images/examples/example-work-15.png"></div>
+                        <div class="hscroller-item"><img src="assets/images/examples/example-work-15.jpg"></div>
                         <div class="hscroller-item"><img src="assets/images/examples/example-work-12.png"></div>
                     </div>
                 </div>
@@ -262,7 +262,7 @@
                 <!-- Image Grid (Non-Mobile) -->
                 <div class="image-grid-layout non-mobile">
                     <div class="grid-item"><img src="assets/images/examples/example-work-6.png"></div>
-                    <div class="grid-item"><img src="assets/images/examples/example-work-15.png"></div>
+                    <div class="grid-item"><img src="assets/images/examples/example-work-15.jpg"></div>
                     <div class="grid-item"><img src="assets/images/examples/example-work-12.png"></div>
                 </div>
 
@@ -309,6 +309,11 @@
                 <li><a href="/printshop">Print Shop</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
+			<span style="display: block; margin-top: 20px; cursor: pointer" >
+				<a href="https://www.instagram.com/izzy.sempill" target="_blank" rel="noopener noreferrer">
+					<img height="22" src="/assets/icons/instagram.svg">
+				</a>
+			</span>
             <span style="display: block; margin-top: 20px;">&copy; 2025 Izzy Sempill</span>
         </div>
 
