--- a/updates.html
+++ b/updates.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main-9fecd16c.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
-    <script src="assets/js/main-535075fd.js"></script>
+    <script src="assets/js/main-eff4185c.js"></script>
     <title>Izzy Sempill</title>
 
     <style>
@@ -65,7 +65,7 @@
 
         <div class="sidebar-header">
             <span class="close-icon" onclick="closeSidebar()">
-                <img src="assets/icons/close.svg" height="24">
+                <img src="/assets/icons/close.svg" height="24">
             </span>
             <span class="logo logo-font">
                 Izzy Sempill
@@ -183,7 +183,7 @@
                     <p class="text-block-subheading">University of Salford</p>     
                     <p class="text-block-subheading">March 2025</p>                        
                     <p class="text-block-content">Participants were invited to bring their unwanted art (e.g. testers, or a piece they'd previously given up on) and rework it into something new. I offered up some of my old work as well. The aim was to create a relaxed atmosphere where they could forget the isolation and 'pressure to produce' we can feel when making art, studying at uni, and more generally in our day to day lives.</p>
-                    <p class="text-block-content">The workshops were very well-received. Participant feedback: “<i>I feel much more awake now and my mood has lifted. It has been great to create work without worrying about the outcome. I'd like a longer session - it was so fun!</i>”</p>
+                    <p class="text-block-content">The workshops were very well-received. Participant feedback: “<i>I feel much more awake now and my mood has lifted. It has been great to create work without worrying about the outcome. I'd like a longer session - it was so fun! ”</i></p>
                 </div>
 
                 <!-- Additional Images (Default Screens) -->
@@ -333,6 +333,11 @@
                 <li><a href="/printshop">Print Shop</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
+			<span style="display: block; margin-top: 20px; cursor: pointer" >
+				<a href="https://www.instagram.com/izzy.sempill" target="_blank" rel="noopener noreferrer">
+					<img height="22" src="/assets/icons/instagram.svg">
+				</a>
+			</span>
             <span style="display: block; margin-top: 20px;">&copy; 2025 Izzy Sempill</span>
         </div>
 
