About Page Changes

--- a/index.html
+++ b/index.html
@@ -178,10 +178,14 @@
             <!-- Page Subheading -->
             <div class="main-content-subheading">
                 <p class="text-block-subheading logo-font">Hi, I'm Izzy</p>
-                <p class="text-block-subheading">I'm a multidisciplinary artist, art teacher and community practitioner based in West Yorkshire.</p>
+                <p class="text-block-subheading">I’m an artist, teacher and community practitioner based in West Yorkshire.</p>
             </div>
 
             <div class="main-content-body">
+
+				<div class="content-element text-block" style="text-align: center;">
+					<p class="text-block-content">In all my work, I want to ensure the experience is meaningful. When I make art, it provides me with a sense of calm and helps me to feel grounded. When I teach, I support young artists to fulfil their potential. When I work with communities, I provide a safe space where people can relax, connect and express themselves creatively.</p>
+				</div>
 
                 <!-- Welcome Message 
                 <div class="content-element text-block welcome-content">
@@ -191,7 +195,7 @@
 
                 <div class="content-element text-block">
                     <p class="text-block-subheading">Artist</p>
-                    <p class="text-block-content">For me, art is a calming and grounding practice. I find so much joy in experimentation, so I always start my process by exploring the unique properties and possibilities of various materials. I often become completely absorbed, creating a large body of work in my chosen medium and then gradually refining select pieces until they capture the mood I aimed to achieve. Though much of my work features negative space and organic shapes, I have never felt it fits within a particular specialism or style. Instead, I am an art enthusiast through and through, always open to trying different methods and techniques until I have grasped them, before moving on to something new.</p>
+                    <p class="text-block-content">My approach is multidisciplinary and material-led – it does not fit neatly within a specialism or style. I start by exploring the properties of different mediums through experimentation, before gradually refining my process. I often include organic shapes and negative space, reflecting the calmness I feel when making art, but I rarely have an end-product in mind.</p>
                     <p class="text-block-content">On this site, you’ll find select prints of my collages, life drawings and mixed media pieces. I'll also provide regular updates about my practice. I have various works and projects in progress, so there's more to come!</p>
                 </div>
                
