--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main-9fecd16c.css" />
+    <link rel="stylesheet" href="assets/css/main-2b73ac9e.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
     <script src="assets/js/main-eff4185c.js"></script>
     <title>Izzy Sempill</title>
@@ -184,8 +184,9 @@
             <div class="main-content-body">
 
 				<!-- Top Message -->
-				<div class="content-element text-block" style="text-align: center;">
-					<p class="text-block-content">In all my work, I want to ensure the experience is meaningful. When I make art, it provides me with a sense of calm and helps me to feel grounded. When I teach, I support young artists to fulfil their potential. When I work with communities, I provide a safe space where people can relax, connect and express themselves creatively.</p>
+				<div class="content-element text-block mobile-align-left" style="text-align: center;">
+					<p class="text-block-content">In all my work, I want to ensure the experience is meaningful. When I make art, it provides me with a sense of calm and helps me feel grounded. When I teach, I support young artists to pursue their interests and reach their potential. When I work with communities, I provide a safe space where people can relax, connect and express themselves creatively.</p>
+					<p class="text-block-content">On this site, you’ll find select prints of my collages, life drawings and mixed media pieces. I'll also provide regular updates about my practice. I have various works and projects in progress, so there's more to come!</p>
 				</div>
 
 				<div class="divider"></div>
@@ -210,8 +211,7 @@
 
                 <div class="content-element text-block">
                     <p class="text-block-subheading">Artist</p>
-                    <p class="text-block-content">My approach is multidisciplinary and material-led – it does not fit neatly within a specialism or style. I start by exploring the properties of different mediums through experimentation, before gradually refining my process. I often include organic shapes and negative space, reflecting the calmness I feel when making art, but I rarely have an end-product in mind.</p>
-                    <p class="text-block-content">On this site, you’ll find select prints of my collages, life drawings and mixed media pieces. I'll also provide regular updates about my practice. I have various works and projects in progress, so there's more to come!</p>
+                    <p class="text-block-content">My approach is multidisciplinary and material-led – it does not fit neatly within a specialism or style. I start by exploring the properties of different mediums through experimentation, before gradually refining my process. I often include organic shapes and negative space, reflecting the calmness I feel when making art, but I rarely have an end-product in mind as I work.</p>
                 </div>
                
                 <div class="divider"></div>
@@ -263,8 +263,8 @@
                 <!-- More Text -->
                 <div class="content-element text-block">
                     <p class="text-block-subheading">Community practitioner</p>
-                    <p class="text-block-content">I'm actively broadening my practice to engage with local communities - something I've always wanted to do. My focus is facilitating and co-curating art projects that represent participants’ experiences and promote positive social change.</p>
-                    <p class="text-block-content">If you are interested in collaborating on community or family projects, <a href="/contact" style="color: inherit;">please get in touch.</a></p>
+                    <p class="text-block-content">I'm actively broadening my practice to engage with local communities - something I've always wanted to do. Find out about the workshops I’ve facilitated on the <a href="/updates" style="color: inherit;">Updates</a> page</p>
+					<p class="text-block-content">If you are interested in collaborating on community or family projects, <a href="/contact" style="color: inherit;">please get in touch.</a></p>
                 </div>
 
                 <div class="divider"></div>
@@ -294,8 +294,6 @@
                     <p class="text-block-content">PGCE Secondary Art & Design (QTS + ECT) - Manchester Metropolitan University</p>
                     <p class="text-block-content">Currently studying MA Socially Engaged Arts Practice - University of Salford</p>
                 </div>
-
-               <div class="divider"></div>
 
             </div>
 
