--- a/updates.html
+++ b/updates.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main-9fecd16c.css" />
+    <link rel="stylesheet" href="assets/css/main-2b73ac9e.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
     <script src="assets/js/main-eff4185c.js"></script>
     <title>Izzy Sempill</title>
@@ -149,6 +149,49 @@
             </div>
 
             <div class="main-content-body">
+
+				<!-- National Festival of Making -->
+                <div class="content-element text-block" style="padding-top:24px">
+                    <p class="text-block-subheading" style="margin-top: 0;">National Festival of Making</p>
+                    <p class="text-block-subheading">Blackburn</p>     
+                    <p class="text-block-subheading">5 & 6 July 2025</p>          
+
+                    <p class="text-block-content">I’m so excited to be leading collage workshops at the National Festival of Making in Blackburn! I’ll be next door to the British Textile Biennial’s pop-up exhibition about Wakes Week.</p>
+                    <p class="text-block-content">From the late 19th to mid 20th Century, Wakes Week was the annual holiday across Lancashire and beyond. Mills and factories would close down for maintenance, and all the workers and their families would go on holiday at once. Families often travelled by rail to the North West coast, visiting Southport, Morecambe and - the most popular - Blackpool.</p>
+                    <p class="text-block-content">Through this exhibition, British Textile Biennial share archival material documenting Wakes Week, including postcards. I’ll be next door, running a collage drop-in where visitors can recreate their own postcard, using copies of the archival imagery combined with photos from contemporary magazines, second-hand books and decorated collage papers.</p>
+                    <p class="text-block-content">Photos to follow! Find out more about the event in the <a href="https://festivalofmaking.co.uk/whats-on/?type=workshops" style="color: inherit;">National Festival of Making programme.</a></p>
+                </div>
+
+                <div class="divider"></div>
+
+				<!-- Handmade Productions -->
+                <div class="content-element text-block" style="padding-top:24px">
+                    <p class="text-block-subheading" style="margin-top: 0;">Handmade Productions</p>
+                    <p class="text-block-subheading">Hebden Bridge Summer Parade</p>     
+                    <p class="text-block-subheading">June 2025</p>          
+
+                    <p class="text-block-content">I really enjoyed working with Handmade Productions in the lead-up to their summer parade. The theme was Water, Woods and Wilderness, to celebrate local wildlife. I helped the artists to prep the amazing costumes, which involved lots of cutting cardboard, measuring fabric and stapling! I also supported with community workshops at the Handmade warehouse, including public open sessions and an afternoon with people seeking asylum. Due to space limitations I tend to work in 2D, so this was a great opportunity to develop my 3D making skills.</p>
+                    <p class="text-block-content">Handmade Productions are all about creativity in the community and I was so pleased to be involved in this wonderful event.</p>
+                </div>
+
+				<!-- Additional Images (Default Screens) -->
+                <div class="content-element image-grid-layout non-mobile" style="padding-bottom: 28px;">
+                    <div class="grid-item"><img src="assets/images/exhibitions/handmade-productions/handmade_1.jpg"></div>
+                    <div class="grid-item"><img src="assets/images/exhibitions/handmade-productions/handmade_2.jpg"></div>
+                    <div class="grid-item"><img src="assets/images/exhibitions/handmade-productions/handmade_3.jpg"></div>
+                </div>
+
+                <!-- Additional Images (Mobile) -->
+                <div class="image-hscroller mobile-only" style="padding-bottom: 28px;">
+                    <div class="scroll-wrapper">
+                        <div class="hscroller-item"><img src="assets/images/exhibitions/handmade-productions/handmade_1.jpg"></div>
+                        <div class="hscroller-item"><img src="assets/images/exhibitions/handmade-productions/handmade_2.jpg"></div>
+                        <div class="hscroller-item"><img src="assets/images/exhibitions/handmade-productions/handmade_3.jpg"></div>
+                        <div class="hscroller-item"><img src="assets/images/exhibitions/handmade-productions/handmade_4.jpg"></div>
+                    </div>
+                </div>
+
+                <div class="divider"></div>
 
 				<!-- Coming Soon (Risograph) -->
                 <div class="content-element text-block" style="padding-top:24px">
