--- a/cart.html
+++ b/cart.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Izzy Sempill Art - Cart">
+	<meta name="keywords" content="Izzy Sempill, Sempill, Isabel Sempill, Art">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../assets/css/main-2b73ac9e.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
-    <script src="/assets/js/main-eff4185c.js"></script>
+    <script src="/assets/js/main-3b0dd11b.js"></script>
     <script src="https://js.stripe.com/v3"></script>
-    <title>Izzy Sempill</title>
+    <title>Izzy Sempill - Cart</title>
 
     <style>
 
@@ -238,6 +240,7 @@
             <ul>
                 <li><a href="/">About</a></li>
                 <li><a href="/updates">Updates</a></li>
+                <li><a href="/mywork">My Work</a></li>
                 <li><a href="/printshop">Print Shop</a></li>
                 <li><a href="/cart"> <img src="/assets/icons/cart.svg"></a></li>
             </ul>
@@ -350,6 +353,7 @@
             <ul>
                 <li><a href="/">About</a></li>
                 <li><a href="/updates">Updates</a></li>
+                <li><a href="/mywork">My Work</a></li>
                 <li><a href="/printshop">Print Shop</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
