--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Izzy Sempill Art - About My Work">
+	<meta name="keywords" content="Izzy Sempill, Sempill, Isabel Sempill, Art">
     <meta name="google-site-verification" content="bAgGI0zOaE-6t0b2yMcEQFUnFBnSa1tNi17mCBTg7nU" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -10,8 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main-2b73ac9e.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
-    <script src="assets/js/main-eff4185c.js"></script>
-    <title>Izzy Sempill</title>
+    <script src="assets/js/main-3b0dd11b.js"></script>
+    <title>Izzy Sempill - About</title>
 
     <style>
 
@@ -141,6 +143,7 @@
             <ul>
                 <li><a href="/">About</a></li>
                 <li><a href="/updates">Updates</a></li>
+                <li><a href="/mywork">My Work</a></li>
                 <li><a href="/printshop">Print Shop</a></li>
                 <li><a href="/cart"> <img src="/assets/icons/cart.svg"></a></li>
             </ul>
@@ -171,7 +174,6 @@
                 <div class="bg-image"></div>
                 <div class="main-content-title">
                     <span>About</span>
-                    <!--<span class="subtitle">Multidisciplinary artist - Art teacher - Community practitioner</span>-->
                 </div>
             </div>
 
@@ -186,52 +188,15 @@
 				<!-- Top Message -->
 				<div class="content-element text-block mobile-align-left" style="text-align: center;">
 					<p class="text-block-content">In all my work, I want to ensure the experience is meaningful. When I make art, it provides me with a sense of calm and helps me feel grounded. When I teach, I support young artists to pursue their interests and reach their potential. When I work with communities, I provide a safe space where people can relax, connect and express themselves creatively.</p>
-					<p class="text-block-content">On this site, you’ll find select prints of my collages, life drawings and mixed media pieces. I'll also provide regular updates about my practice. I have various works and projects in progress, so there's more to come!</p>
 				</div>
 
 				<div class="divider"></div>
 
-				<!-- Image Scroller (Mobile) -->
-                <div class="image-hscroller mobile-only">
-                    <div class="scroll-wrapper">
-                        <div class="hscroller-item"><img src="assets/images/examples/example-work-1.png"></div>
-                        <div class="hscroller-item"><img src="assets/images/examples/example-work-2.png"></div>
-                        <div class="hscroller-item"><img src="assets/images/examples/example-work-3.png"></div>
-                    </div>
-                </div>
-
-                <!-- Image Grid (Non-Mobile) -->
-                <div class="image-grid-layout non-mobile">
-                    <div class="grid-item"><img src="assets/images/examples/example-work-1.png"></div>
-                    <div class="grid-item"><img src="assets/images/examples/example-work-2.png"></div>
-                    <div class="grid-item"><img src="assets/images/examples/example-work-3.png"></div>
-                </div>
-
-                <div class="divider"></div>
-
                 <div class="content-element text-block">
                     <p class="text-block-subheading">Artist</p>
-                    <p class="text-block-content">My approach is multidisciplinary and material-led – it does not fit neatly within a specialism or style. I start by exploring the properties of different mediums through experimentation, before gradually refining my process. I often include organic shapes and negative space, reflecting the calmness I feel when making art, but I rarely have an end-product in mind as I work.</p>
+                    <p class="text-block-content">My approach is multidisciplinary and material-led – it does not fit neatly within a specialism. I start by exploring the properties of different mediums through experimentation, before gradually refining my process. My <a href="/printshop" style="color: inherit;">Print Shop</a> demonstrates my go-to style, featuring organic shapes and negative space, but I rarely have an end-product in mind as I work. Examples of other pieces I’ve enjoyed making can be found in the <a href="/mywork" style="color: inherit;">My Work</a> section, showing my broader range.</p>
                 </div>
                
-                <div class="divider"></div>
-
-				<!-- Image Scroller (Mobile) -->
-                <div class="image-hscroller mobile-only">
-                    <div class="scroll-wrapper">
-                        <div class="hscroller-item"><img src="assets/images/examples/example-work-14.png"></div>
-                        <div class="hscroller-item"><img src="assets/images/examples/example-work-13.png"></div>
-                        <div class="hscroller-item"><img src="assets/images/examples/example-work-5.png"></div>
-                    </div>
-                </div>
-
-                <!-- Image Grid (Non-Mobile) -->
-                <div class="image-grid-layout non-mobile">
-                    <div class="grid-item"><img src="assets/images/examples/example-work-14.png"></div>
-                    <div class="grid-item"><img src="assets/images/examples/example-work-13.png"></div>
-                    <div class="grid-item"><img src="assets/images/examples/example-work-5.png"></div>
-                </div>
-
                 <div class="divider"></div>
 
                 <!-- More Text -->
@@ -242,50 +207,13 @@
 
                 <div class="divider"></div>
 
-                <!-- Image Scroller (Mobile) -->
-                <div class="image-hscroller mobile-only">
-                    <div class="scroll-wrapper">
-                        <div class="hscroller-item"><img src="assets/images/examples/example-work-6.png"></div>
-                        <div class="hscroller-item"><img src="assets/images/examples/example-work-15.jpg"></div>
-                        <div class="hscroller-item"><img src="assets/images/examples/example-work-12.png"></div>
-                    </div>
-                </div>
-
-                <!-- Image Grid (Non-Mobile) -->
-                <div class="image-grid-layout non-mobile">
-                    <div class="grid-item"><img src="assets/images/examples/example-work-6.png"></div>
-                    <div class="grid-item"><img src="assets/images/examples/example-work-15.jpg"></div>
-                    <div class="grid-item"><img src="assets/images/examples/example-work-12.png"></div>
-                </div>
-
-                <div class="divider"></div>
-
                 <!-- More Text -->
                 <div class="content-element text-block">
                     <p class="text-block-subheading">Community practitioner</p>
-                    <p class="text-block-content">I'm actively broadening my practice to engage with local communities - something I've always wanted to do. Find out about the workshops I’ve facilitated on the <a href="/updates" style="color: inherit;">Updates</a> page</p>
-					<p class="text-block-content">If you are interested in collaborating on community or family projects, <a href="/contact" style="color: inherit;">please get in touch.</a></p>
+                    <p class="text-block-content">I'm currently studying an MA in Socially Engaged Arts Practice at the University of Salford and actively engaging with local communities through art. This is something I've always wanted to do, so gaining the experience has been exciting and rewarding. You can find out about the projects I’ve been involved with and sessions I’ve facilitated on the <a href="/updates" style="color: inherit;">Updates</a> page. If you are interested in collaborating, <a href="/contact" style="color: inherit;">please get in touch!</a></p>
                 </div>
 
                 <div class="divider"></div>
-
-				<!-- Image Scroller (Mobile) -->
-                <div class="image-hscroller mobile-only">
-                    <div class="scroll-wrapper">
-                        <div class="hscroller-item"><img src="assets/images/examples/example-work-4.png"></div>
-                        <div class="hscroller-item"><img src="assets/images/examples/example-work-10.png"></div>
-                        <div class="hscroller-item"><img src="assets/images/examples/example-work-9.png"></div>
-                    </div>
-                </div>
-
-                <!-- Image Grid (Non-Mobile) -->
-                <div class="image-grid-layout non-mobile">
-                    <div class="grid-item"><img src="assets/images/examples/example-work-4.png"></div>
-                    <div class="grid-item"><img src="assets/images/examples/example-work-10.png"></div>
-                    <div class="grid-item"><img src="assets/images/examples/example-work-9.png"></div>
-                </div>
-                
-				<div class="divider"></div>
 
                 <!-- Qualifications -->
                 <div class="content-element text-block">
@@ -307,6 +235,7 @@
             <ul>
                 <li><a href="/">About</a></li>
                 <li><a href="/updates">Updates</a></li>
+                <li><a href="/mywork">My Work</a></li>
                 <li><a href="/printshop">Print Shop</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
