--- a/product/gate-collage-3.html
+++ b/product/gate-collage-3.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../assets/css/main-2b73ac9e.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
-    <script src="/assets/js/main-eff4185c.js"></script>
+    <script src="/assets/js/main-3b0dd11b.js"></script>
     <title>Izzy Sempill</title>
 
     <style>
@@ -265,6 +265,7 @@
             <ul>
                 <li><a href="/">About</a></li>
                 <li><a href="/updates">Updates</a></li>
+                <li><a href="/mywork">My Work</a></li>
                 <li><a href="/printshop">Print Shop</a></li>
                 <li><a href="/cart"> <img src="/assets/icons/cart.svg"></a></li>
             </ul>
@@ -428,6 +429,7 @@
             <ul>
                 <li><a href="/">About</a></li>
                 <li><a href="/updates">Updates</a></li>
+                <li><a href="/mywork">My Work</a></li>
                 <li><a href="/printshop">Print Shop</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
