--- a/mywork.html
+++ b/mywork.html
@@ -60,6 +60,7 @@
                     <ul>
                         <li><a href="/">About</a></li>
                         <li><a href="/updates">Updates</a></li>
+                        <li><a href="/mywork">My Work </a></li>
                         <li><a href="/printshop">Print Shop</a></li>
                         <li><a href="/cart">My Cart</a></li>
                     </ul>
